# coleg

./: .env.example  .env.production  .gitignore_update  .replit  ENTIDAD_RELACION.md  README.md  app.py  auth.py  controllers.py  fix_db.py  models.py  package.json  pyproject.toml  requirements_prod.txt  reset_db.py  routes.py  run.py  storage.py  test_app.py  views.py
attached_assets/: Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-create-course--1764466477821_1764466477822.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-register-Did-1764467679442_1764467679443.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-register-page--1764466335873_1764466335874.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-teacher-grades-1764471173619_1764471173620.txt  Pasted-OperationalError-sqlalchemy-exc-OperationalError-psycopg2-OperationalError-SSL-connection-has-be-1764476212955_1764476212955.txt  Pasted-OperationalError-sqlalchemy-exc-OperationalError-psycopg2-OperationalError-SSL-connection-has-be-1764479103797_1764479103798.txt  Pasted-OperationalError-sqlalchemy-exc-OperationalError-psycopg2-OperationalError-SSL-connection-has-be-1764480509215_1764480509216.txt  Pasted-OperationalError-sqlalchemy-exc-OperationalError-psycopg2-OperationalError-SSL-connection-has-be-1764557591861_1764557591863.txt  (+13 more)
client/: index.html
instance/: academia.db
server/: auth.ts  routes.ts  storage.ts
shared/: schema.ts
(+42 files in other folders)
